--- a/css/login.css
+++ b/css/login.css
@@ -128,3 +128,39 @@
     border-bottom: 2px solid #d9d9d9; 
     margin: auto; 
 } 
+
+/* ========================================================================= */
+/* blobs */
+
+.blue-blob{
+  position: absolute;
+  height: 200vh;
+  bottom: -115%;
+  left: -50%;
+  z-index: -1; /* Ensure it stays behind other content */
+}
+
+.yellow-blob{
+  height: 100vh;
+  position: absolute;
+  right: -15%;
+  top: -60%;
+  z-index: -1; /* Ensure it stays behind other content */
+}
+
+
+.blob-blue{
+  position: absolute;
+  height: 200vh;
+  top: -60%;
+  left: -70%;
+  z-index: -1; /* Ensure it stays behind other content */
+}
+
+.blob-yellow{
+  height: 100vh;
+  position: absolute;
+  right: -25%;
+  bottom: -60%;
+  z-index: -1; /* Ensure it stays behind other content */
+}
