--- a/css/login.css
+++ b/css/login.css
@@ -4,16 +4,21 @@
 
 
   .login-con{
-    background-color: white;
+    background-color: #faf9f6 !important;
     padding: 10%;
-    border-radius: 5%;
+    border-radius: 25px;
     box-shadow: 8px 17px 42px 0px #0000003e;
   }
 
   .btn-login{
     width: 100% !important;
-    background-color: #2EAFAB !important;
-    color: #FBFDFC !important;
+    background-color: #2F4F2F !important;
+    color: #faf9f6 !important;
+  }
+
+  .login-title{
+    font-family: "Shadows Into Light", cursive !important; 
+    color: #2F4F2F;
   }
 
 
@@ -77,11 +82,11 @@
   }
   
   input:checked + .slider {
-    background-color: #2EAFAB;
+    background-color: #2F4F2F;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2EAFAB;
+    box-shadow: 0 0 1px #2F4F2F;
   }
   
   input:checked + .slider:before {
@@ -117,7 +122,7 @@
 .btn-create{
     width: 60%;
     margin-left: 20%;
-    background-color: #A2E7E4 !important;
+    background-color: #b5d4b5 !important;
     border-radius: 25px !important;
     color: #FBFDFC !important;
 }
