--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -19,7 +19,7 @@
     display: flex !important;
     /* flex-direction: column; */
     justify-content: center;
- 
+    padding: 10% !important;
   }
 
   .logo-img{
@@ -28,7 +28,6 @@
   }
 
   .brand-name{
-    margin-top: -5vh;
     display: flex !important;
     justify-content: center;
     width: 100%;
