--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow-x: hidden;
+    overflow-x: hidden !important; 
 }
 
 
