style profile picture
add a background colour to profile pictures

--- a/css/userActivity.css
+++ b/css/userActivity.css
@@ -50,15 +50,18 @@
 }
 
 
+
 .user-profile-title{
     font-size: 64px;
 }
     
 .profile-picture {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
+    padding: 2%;
+    background-color: #4A7A8C;
 }
     
 .user-stats p {
