add profile pictures to index
add profile pictures to cards on index and rearrange cards

--- a/css/header.css
+++ b/css/header.css
@@ -95,3 +95,8 @@ a{
     font-weight: 800 !important;
 }
 
+.pfp-index{
+    width: 50px !important;
+    height: 50px;
+    border-radius: 50% !important;
+}
