--- a/css/header.css
+++ b/css/header.css
@@ -82,7 +82,14 @@ a{
 
 .vote-btn{
     color: #2F4F2F;
+    font-weight: 400 !important;
+    font-size: 24px;
+}
+
+.vote-btn:hover{
     font-weight: 800 !important;
+    color: #4A7A8C;
+    font-size: 24px;
 }
 
 .btn-post-reply{
@@ -94,4 +101,10 @@ a{
     width: 50px !important;
     height: 50px;
     border-radius: 50% !important;
+}
+
+.vote-btn.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    border: none;
 }
